# personal_records_intelligence_api

./: .coverage  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  skills.md
ai/skills/: test-first-development.md
app/: deps.py  main.py
app/api/: router.py
app/api/routes/: chat.py  health.py  library.py
app/api/v1/: api.py
app/api/v1/endpoints/: chat.py  health.py  library.py
app/core/: config.py
app/db/: connection.py
app/repositories/: __init__.py  conversations.py  documents.py
app/schemas/: chat.py  health.py  library.py
app/services/: chat.py  library.py  ollama.py  text_processing.py
docs/: api-contract.md  architecture.md  development-workflow.md  docker-setup.md  duckdb-setup.md  low-level-architecture.md
docs/diagrams-src/: README.md  architecture-deployment-component.mmd  architecture-ingestion-flow.mmd  architecture-query-flow.mmd  low-level-ingestion-job-state.mmd  low-level-query-execution-pipeline.mmd  low-level-runtime-topology.mmd  low-level-table-relationship-map.mmd
examples/: README.md
tests/: conftest.py  test_api_endpoints.py  test_chat_service.py  test_config_db.py  test_health_check.py  test_library_service.py  test_ollama.py  test_repositories.py  test_text_processing.py
