[tool.poetry]
name = "personal-records-intelligence-api"
version = "0.1.0"
description = "FastAPI backend for the Personal Records Intelligence MVP."
authors = []
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.110,<1.0"
uvicorn = { version = ">=0.30,<1.0", extras = ["standard"] }
pydantic = ">=2.7,<3.0"
duckdb = ">=1.0,<2.0"
httpx = ">=0.27,<1.0"
pypdf = ">=5.4,<6.0"
python-multipart = ">=0.0.9,<1.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0,<9.0"
pytest-cov = ">=5.0,<7.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_empty = true
omit = [
    "app/__init__.py",
    "app/api/__init__.py",
    "app/api/v1/__init__.py",
    "app/api/v1/endpoints/__init__.py",
    "app/core/__init__.py",
    "app/db/__init__.py",
    "app/repositories/__init__.py",
    "app/schemas/__init__.py",
    "app/services/__init__.py",
]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
